--- a/static/css/start_page.css
+++ b/static/css/start_page.css
@@ -1,37 +1,38 @@
-.animation {
-    background-color: #111;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: "Times New Roman", serif;
+    background-color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     min-height: 100vh;
 }
-
-.wavy {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    font-size: 60px;
-    color: #fff;
+body:hover{
+    cursor: pointer;
 }
 
-.wavy span {
+.waviy {
+    position: relative;
+}
+
+.waviy span {
     position: relative;
     display: inline-block;
-    animation: flip 2s infinite;
+    font-size: 40px;
+    color: red;
+    font-weight: bold;
+    text-transform: uppercase;
+    -webkit-animation: flipY 2s infinite;
+    -webkit-animation-delay: calc(.04s * var(--i))
 }
 
-.wavy span:not(:last-child)::after {
-    content: "";
-    display: block;
-    height: 30px;
-}
-
-@keyframes flip {
-    0% {
-        transform: rotateY(0);
-    }
-    100% {
-        transform: rotateY(360deg);
+@-webkit-keyframes flipY {
+    0%, 80% {
+        transform: rotateY(360deg)
     }
 }
