--- a/templates/about_project.html
+++ b/templates/about_project.html
@@ -1,19 +1,13 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{% load static %}
-        <!DOCTYPE html>
-        <html style="font-size: 16px;" lang="ru">
-        <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta charset="utf-8">
-        <title>История МВОКУ</title>
+    <title>ПРОЕКТ "КРЕМЛЁВСКАЯ ПАМЯТЬ"</title>
     <link rel="stylesheet" href="{% static 'css/nicepage.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'css/about.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'js/jquery-1.9.1.min.js' %}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{% static 'js/nicepage.js' %}" defer=""></script>
-    {#    <script class="u-script" type="text/javascript" src="{% static 'js/autoscroll.js' %}" defer=""></script>#}
 </head>
 {% if bg_image %}
     <body class="u-body u-xl-mode" data-lang="ru"
@@ -36,9 +30,10 @@
                 <p class="u-align-center u-text u-text-1"> Московское высшее общевойсковое командное
                     училище&nbsp;<br>Министерство обороны Российской Федерации
                 </p>
+                <a href="{% url 'start' %}">
                 <img class="u-image u-image-contain u-image-default u-image-1"
                      src="{% get_media_prefix %}{{ "images/default/Эмблема.png" }}" alt=""
-                     data-image-width="1181" data-image-height="1371">
+                     data-image-width="1181" data-image-height="1371"></a>
                 <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
                     <div class="u-gallery-inner u-gallery-inner-1">
                         <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1280"
