--- a/templates/start_page.html
+++ b/templates/start_page.html
@@ -4,128 +4,51 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title>История МВОКУ</title>
+    <title>ПРОЕКТ "КРЕМЛЁВСКАЯ ПАМЯТЬ"</title>
     <link rel="stylesheet" href="{% static 'css/start_page.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'css/nicepage.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'js/jquery-1.9.1.min.js' %}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{% static 'js/nicepage.js' %}" defer=""></script>
     <script class="u-script" type="text/javascript" src="{% static 'js/start_page.js' %}" defer=""></script>
 </head>
-{% if bg_image %}
-    <body class="u-body u-xl-mode" data-lang="ru"
-          style="
-                  background: rgba(225,225,225,0.35) url(
-                  {% get_media_prefix %}{{ bg_image }}) no-repeat;
-                  -moz-background-size: 100%; /* Firefox 3.6+ */
-                  -webkit-background-size: 100%; /* Safari 3.1+ и Chrome 4.0+ */
-                  -o-background-size: 100%; /* Opera 9.6+ */
-                  background-size: 100%; /* Современные браузеры */
-                  ">
-{% else %}
-    <body class="u-body u-xl-mode" data-lang="ru">
-{% endif %}
-<header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container"
-        id="sec-53f4" style="">
-    <div class="u-section-rows">
-        <div class="u-custom-color-1 u-section-row u-section-row-1">
-            <div class="u-clearfix u-sheet u-valign-top u-sheet-1">
-                <p class="u-align-center u-text u-text-1"> Московское высшее общевойсковое командное
-                    училище&nbsp;<br>Министерство обороны Российской Федерации
-                </p>
-                <img class="u-image u-image-contain u-image-default u-image-1"
-                     src="{% get_media_prefix %}{{ "images/default/Эмблема.png" }}" alt=""
-                     data-image-width="1181" data-image-height="1371">
-                <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
-                    <div class="u-gallery-inner u-gallery-inner-1">
-                        <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1280"
-                             data-image-height="1280">
-                            <div class="u-back-slide">
-                                <img class="u-back-image u-expanded u-image-contain"
-                                     src="{% get_media_prefix %}{{ "images/default/жук.png" }}">
-                            </div>
-                            <div class="u-over-slide u-shading u-over-slide-1">
-                                <h3 class="u-gallery-heading"></h3>
-                                <p class="u-gallery-text"></p>
-                            </div>
-                        </div>
-                        <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1254"
-                             data-image-height="1280">
-                            <div class="u-back-slide">
-                                <img class="u-back-image u-expanded u-image-contain"
-                                     src="{% get_media_prefix %}{{ "images/default/лен.png" }}">
-                            </div>
-                            <div class="u-over-slide u-shading u-over-slide-2">
-                                <h3 class="u-gallery-heading"></h3>
-                                <p class="u-gallery-text"></p>
-                            </div>
-                        </div>
-                        <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1280"
-                             data-image-height="1280">
-                            <div class="u-back-slide">
-                                <img class="u-back-image u-expanded u-image-contain"
-                                     src="{% get_media_prefix %}{{ "images/default/ок.png" }}">
-                            </div>
-                            <div class="u-over-slide u-shading u-over-slide-3">
-                                <h3 class="u-gallery-heading"></h3>
-                                <p class="u-gallery-text"></p>
-                            </div>
-                        </div>
-                        <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1070"
-                             data-image-height="1280">
-                            <div class="u-back-slide">
-                                <img class="u-back-image u-expanded u-image-contain"
-                                     src="{% get_media_prefix %}{{ "images/default/кр.png" }}">
-                            </div>
-                            <div class="u-over-slide u-shading u-over-slide-4">
-                                <h3 class="u-gallery-heading"></h3>
-                                <p class="u-gallery-text"></p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-        <div class="u-repeater u-block-control u-block-f578-32"
-             style="display: flex;background-color:#a8191f; min-height: 45.1094px; justify-content: space-evenly"
-             data-block="9"
-             data-block-type="List" data-block-selected="true">
-            <div class="u-align-center u-container-style u-list-item u-repeater-item u-block-control u-block-f578-33"
-                 style="" data-block="10" data-block-type="ListItem">
-                <div class="u-container-layout u-similar-container
-        u-valign-middle u-block-f578-34" style="padding-top: 0.2658px; padding-bottom: 0.2658px; padding-left: 10px;
-        padding-right: 10px" data-container-layout-dom="1"><a class="u-text u-text-default u-text-4"
-                                                              href="{% url 'about' %}">История МВОКУ</a></div>
-            </div>
-            <div class="u-align-center u-container-style u-list-item u-repeater-item u-block-control u-block-f578-36"
-                 style="" data-block="12" data-block-type="ListItem">
-                <div class="u-container-layout u-similar-container
-        u-valign-middle u-block-f578-37" style="padding-top: 0.2658px; padding-bottom: 0.2658px; padding-left: 10px;
-        padding-right: 10px" data-container-layout-dom="2"><a class="u-text u-text-default u-text-4"
-                                                              href="{% url 'find' %}">Поиск записей</a></div>
-            </div>
-
-            <div class="u-align-center u-container-style u-list-item u-repeater-item u-block-control u-block-f578-39"
-                 style="" data-block="38" data-block-type="ListItem">
-                <div class="u-container-layout u-similar-container
-        u-valign-middle u-block-f578-40" style="padding-top: 0.2658px; padding-bottom: 0.2658px; padding-left: 10px;
-        padding-right: 10px" data-container-layout-dom="5"><a class="u-text u-text-default u-text-4"
-                                                              href="{% url 'about_project' %}">О проекте</a></div>
-            </div>
-        </div>
-
-    </div>
-</header>
-<section class="animation">
-<div class="wavy">
-    <span>ПРОЕКТ</span>
-    &nbsp;
-    <span>"КРЕМЛЁВСКАЯ</span>
-    &nbsp;
-    <span>ПАМЯТЬ"</span>
-</div>
-</section>
+<body onclick="window.location={% url 'find' %}">
+  <div class="waviy">
+    <span style="--i:1">П</span>
+    <span style="--i:2">Р</span>
+    <span style="--i:3">О</span>
+    <span style="--i:4">Е</span>
+    <span style="--i:5">К</span>
+    <span style="--i:6">Т</span>
+  </div>
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  <div class="waviy">
+    <span style="--i:7">"</span>
+    <span style="--i:8">К</span>
+    <span style="--i:9">Р</span>
+    <span style="--i:10">Е</span>
+    <span style="--i:11">М</span>
+    <span style="--i:12">Л</span>
+    <span style="--i:13">Ё</span>
+    <span style="--i:14">В</span>
+    <span style="--i:15">С</span>
+    <span style="--i:16">К</span>
+    <span style="--i:17">А</span>
+    <span style="--i:18">Я</span>
+  </div>
+  &nbsp;
+  &nbsp;
+  &nbsp;
+  <div class="waviy">
+    <span style="--i:19">П</span>
+    <span style="--i:20">А</span>
+    <span style="--i:21">М</span>
+    <span style="--i:22">Я</span>
+    <span style="--i:23">Т</span>
+    <span style="--i:24">Ь</span>
+    <span style="--i:25">"</span>
+  </div>
 </body>
 
 </html>
