--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <title><title>ПРОЕКТ "КРЕМЛЁВСКАЯ ПАМЯТЬ"</title></title>
+    <title><title>ПРОЕКТ "КРЕМЛЁВСКАЯ ПАМЯТЬ"</title>
     <link rel="stylesheet" href="{% static 'css/nicepage.css' %}" media="screen">
     <link rel="stylesheet" href="{% static 'css/about.css' %}" media="screen">
     <script class="u-script" type="text/javascript" src="{% static 'js/jquery-1.9.1.min.js' %}" defer=""></script>
@@ -32,9 +32,9 @@
                     училище&nbsp;<br>Министерство обороны Российской Федерации
                 </p>
                 <a href="{% url 'start' %}">
-                <img class="u-image u-image-contain u-image-default u-image-1"
-                     src="{% get_media_prefix %}{{ "images/default/Эмблема.png" }}" alt=""
-                     data-image-width="1181" data-image-height="1371"></a>
+                    <img class="u-image u-image-contain u-image-default u-image-1"
+                         src="{% get_media_prefix %}{{ "images/default/Эмблема.png" }}" alt=""
+                         data-image-width="1181" data-image-height="1371"></a>
                 <div class="u-gallery u-layout-grid u-lightbox u-no-transition u-show-text-none u-gallery-1">
                     <div class="u-gallery-inner u-gallery-inner-1">
                         <div class="u-effect-hover-zoom u-gallery-item u-shape-rectangle" data-image-width="1280"
@@ -96,7 +96,8 @@
                 <div class="u-container-layout u-similar-container
         u-valign-middle u-block-f578-34" style="padding-top: 0.2658px; padding-bottom: 0.2658px; padding-left: 10px;
         padding-right: 10px" data-container-layout-dom="1"><a class="u-text u-text-default u-text-4"
-                                                              href="{% url 'about' %}">История МВОКУ</a></div>
+                                                              href="{% url 'about' %}">История
+                    МВОКУ</a></div>
             </div>
             <div class="u-align-center u-container-style u-list-item u-repeater-item u-block-control u-block-f578-36"
                  style="" data-block="12" data-block-type="ListItem">
